--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.0",
+    "@react-three/drei": "^9.105.3",
+    "@react-three/fiber": "^8.16.1",
     "gsap": "^3.12.5",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "three": "^0.163.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
