--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-three/drei": "^9.105.3",
     "@react-three/fiber": "^8.16.1",
     "gsap": "^3.12.5",
-    "locomotive-scroll": "^4.1.4",
+    "locomotive-scroll": "^5.0.0-beta.11",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
